--- a/style.css
+++ b/style.css
@@ -42,3 +42,9 @@ ul {
      width: 20%;
      margin-right: 15%
 }
+.titulo-centralizado { 
+    text-align: center;
+}
+.titulo-principal {
+    padding-left: 20px;
+}
